@@ -233,6 +233,8 @@ char const L_char32_t[]           = "char32_t";
 
 // C23
 char const L__BitInt[]            = "_BitInt";
+char const L_typeof[]             = "typeof";
+char const L_typeof_unqual[]      = "typeof_unqual";
 
 // C23 & C++11
 char const L_nullptr[]            = "nullptr";
