@@ -260,6 +260,8 @@ extern char const L_char32_t[];
 
 // C23
 extern char const L__BitInt[];
+extern char const L_typeof[];
+extern char const L_typeof_unqual[];
 
 // C23 & C++11
 extern char const L_nullptr[];
